--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "vitest": "^2.0.5"
   },
   "dependencies": {
-    "fastify": "^4.28.1"
+    "@prisma/client": "^5.17.0",
+    "dotenv": "^16.4.5",
+    "fastify": "^4.28.1",
+    "openai": "^4.54.0"
   }
 }
