--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsc src --out-dir build"
+    "build": "tsc src --out-dir build",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +18,8 @@
     "tsup": "^8.2.3",
     "tsx": "^4.16.5",
     "typescript": "^5.5.4",
-    "vitest": "^2.0.5"
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^1.3.1"
   },
   "dependencies": {
     "@prisma/client": "^5.17.0",
