--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^22.0.2",
+    "@types/supertest": "^6.0.2",
+    "supertest": "^7.0.0",
     "tsup": "^8.2.3",
     "tsx": "^4.16.5",
     "typescript": "^5.5.4",
