:Feat add e2e test

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
 KEY_IA=
 MODEL=
-DATABASE_URL="myslq://user:password@host:3306/database?directConnection=true"
+DB_DATABASE=you-database
+DATABASE_URL="myslq://root:docker@127.0.0.1:3306/database?directConnection=true"
+DB_DATABASE_TEST=e2e
+DATABASE_URL_TEST="mysql://root:docker@127.0.0.1:3306/e2e?connection_limit=100&pool_timeout=1000"
+
 #for migrations use localhost como host, para o client, use o nome do container.
