--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsc src --out-dir build",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
+    "test": "vitest run --dir src/use-cases",
+    "test:watch": "vitest --dir src/use-cases",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +20,7 @@
   "devDependencies": {
     "@types/node": "^22.0.2",
     "@types/supertest": "^6.0.2",
+    "npm-run-all": "^4.1.5",
     "supertest": "^7.0.0",
     "tsup": "^8.2.3",
     "tsx": "^4.16.5",
@@ -28,6 +33,7 @@
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
     "openai": "^4.54.0",
+    "sqlite3": "^5.1.7",
     "zod": "^3.23.8"
   }
 }
