--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@fastify/swagger": "^8.15.0",
     "@fastify/swagger-ui": "^4.0.1",
     "@prisma/client": "^5.17.0",
+    "@types/json-bigint": "^1.0.4",
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
+    "json-bigint": "^1.0.0",
     "openai": "^4.54.0",
     "sqlite3": "^5.1.7",
     "zod": "^3.23.8"
